# learning_llm

./: .gitignore  Makefile  README.md  main.py  neural_network.py  out_graph  out_graph.dot  pyproject.toml  tokenizer.py  train.py
nn_zero_to_hero/: __init__.py  __main__.py  micro_grad.py  neural_network.py  value.py
