[project]
name = "llm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "lrutils>=0.1.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
    "torch>=2.2.0",
]
[tool.uv]
override-dependencies = [
    "python-dateutil>=2.8.2" 
]
